[workspace]
members = [
  "src/services/tuDsgContent/modules/tuDsgContent",
  "src/modules/tu_ipfs",
  "src/services/myService/modules/myService",
  "src/services/tuDsgRenderer/modules/tuDsgRenderer",
  "src/modules/tu_volumes",
  "src/services/tuDsgRenderCollect/modules/tuDsgRenderCollect",
  "src/services/tuDsgWebHost/modules/tuDsgWebHost",
  "src/services/tuCars/modules/tuCars",
  "src/services/tuContentStore/modules/tuContentStore",
  "src/services/tuDsgTemplateData/modules/tuDsgTemplateData",
  "src/services/tuGit/modules/tuGit"
]
