[package]
name = "tu_car"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tu_car"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.10.3"
serde_json = "*"
tu_types = { path = "../../tuTypes" }
tu_dsg_helpers = { path = "../../tuDsgHelpers" }

[dev-dependencies]
marine-rs-sdk-test = "0.16.0"
