[package]
name = "cioConsensus"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "cioConsensus"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.14.0", features = ["logger"] }
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
cid = "0.10.1"
multihash = "0.18.1"
base58 = "0.2.0"
log = "0.4.22"

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
