[package]
name = "cioSigner"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "cioSigner"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.14.0"
base64 = "0.21.2"
tiny-keccak = "=1.4"
keccak-hash = "0.8.0"
libsecp256k1 = "0.7.1"
rand = "0.8.4"
serde = "1.0.171"
serde_json = "1.0.102"

alloy-signer="0.1.4"
alloy-signer-local="0.1.4"
alloy-primitives = { version = "0.7.7" , features = ["getrandom"]}
alloy-consensus = "0.1.4"
alloy-network = "0.1.4"
num = "0.4.3"
hex = "0.4.3"
k256 = "0.13.3"
ethers-core = "2.0.14"

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
