[package]
name = "dsgContent"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "dsgContent"
path = "src/main.rs"

[dependencies]
cio-response-types = { git = "https://github.com/composibleIO/cio-response-types", branch = "main" }
marine-rs-sdk = { version = "0.14.0", features = ["logger"] }
tu_dsg_types = { path = "../../../../tuDsgTypes" }
serde = "1.0.198"
serde_json = "1.0.116"
rmp-serde = "1.1.2"
regex = "1.5"
log = "0.4.22"

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
