[package]
name = "tuCars"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tuCars"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.10.3"
serde_json = "*"
tu_dsg_types = { path = "../../../../tuDsgTypes" }
tu_types = { path = "../../../../tuTypes" }

[dev-dependencies]
marine-rs-sdk-test = "0.16.0"

