[package]
name = "tuContentStore"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tuContentStore"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.10.1"
tu_dsg_types = { path = "../../../../tuDsgTypes" }
tu_types = { path = "../../../../tuTypes" }
serde = "1.0.193"
serde_json = "1.0.108"
rmp-serde = "1.1.2"

[dev-dependencies]
marine-rs-sdk-test = "0.12.0"
