[package]
name = "tuContentStore"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tuContentStore"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.14.0", features = ["logger"] }
curl-effector-imports = { git = "https://github.com/fluencelabs/curl-effector.git", branch = "main" }
cio-curl-effector-imports = { git = "https://github.com/composibleIO/cio-curl-effector.git", branch = "main" }
cio-response-types = { git = "https://github.com/composibleIO/cio-response-types", branch = "main" }
tu_dsg_types = { path = "../../../../tuDsgTypes" }
serde = "1.0.198"
serde_json = "1.0.116"
rmp-serde = "1.1.2"
chrono = "0.4"
log = "0.4.22"

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
