[package]
name = "tuDsgContent"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tuDsgContent"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.10.1"
tu_dsg_types = { path = "../../../../tuDsgTypes" }
tu_types = { path = "../../../../../../tu_rust_types" }
serde = "1.0.193"
serde_json = "1.0.108"
regex = "1.5"

[dev-dependencies]
marine-rs-sdk-test = "0.11.0"
