[package]
name = "tuDsgContent"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tuDsgContent"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.14.0"
tu_dsg_types = { path = "../../../../tuDsgTypes" }
tu_types = { path = "../../../../tuTypes" }
serde = "1.0.198"
serde_json = "1.0.116"
rmp-serde = "1.1.2"
regex = "1.5"

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
