[package]
name = "tuDsgRenderCollect"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tuDsgRenderCollect"
path = "src/main.rs"

[dependencies]
cio-response-types = { git = "https://github.com/composibleIO/cio-response-types", branch = "main" }
marine-rs-sdk = "0.10.3"
tu_dsg_types = { path = "../../../../tuDsgTypes" }
serde_json = "1.0.116"
chrono = "0.4.31"
serde = "1.0.198"
regex = "1.5"
thiserror = "1.0"

[dev-dependencies]
marine-rs-sdk-test = "0.16.0"
