[package]
name = "tuDsgRenderImport"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tuDsgRenderImport"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.10.3"
tu_dsg_types = { path = "../../../../tuDsgTypes" }
tu_types = { path = "../../../../tuTypes" }
serde_json = "1.0.108"
chrono = "0.4.31"
serde = "1.0.193"
regex = "1.5"
thiserror = "1.0"

[dev-dependencies]
marine-rs-sdk-test = "0.16.0"
