[package]
name = "tuDsgRenderer"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tuDsgRenderer"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.10.1"
tu_dsg_types = { path = "../../../../tuDsgTypes" }
tu_types = { path = "../../../../../../tu_rust_types" }
serde_json = "1.0.108"
handlebars = "4.5.0"
chrono = "0.4.31"
serde = "1.0.193"
regex = "1.5"
thiserror = "1.0"
markdown_to_html_parser = "0.1.0"
markdown = "0.3.0"


[dev-dependencies]
marine-rs-sdk-test = "0.11.0"
