[package]
name = "tuDsgWebHost"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tuDsgWebHost"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.10.3"
tu_dsg_types = { path = "../../../../tuDsgTypes" }
tu_types = { path = "../../../../tuTypes" }
serde = "1.0.193"
serde_json = "1.0.108"

[dev-dependencies]
marine-rs-sdk-test = "0.16.0"
