[package]
name = "tuDsgWebHost"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tuDsgWebHost"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.14.0"
cio-curl-effector-imports = { git = "https://github.com/composibleIO/cio-curl-effector.git", branch = "main" }
curl-effector-imports = { git = "https://github.com/fluencelabs/curl-effector.git", branch = "main" }
cio-response-types = { git = "https://github.com/composibleIO/cio-response-types", branch = "main" }
tu_dsg_types = { path = "../../../../tuDsgTypes" }
serde = "1.0.198"
serde_json = "1.0.116"
chrono = "0.4"

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"